# trading-wisdom-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  docker-compose.yml  option_divergence_indicator.pine  option_divergence_result.csv  pyproject.toml  sasa_option_divergence.pine  sasa_option_divergence_v3.csv  sasa_option_divergence_v3.pine
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: feedback.md
docs/: Architecture.md  CLI-Design.md  FEEDBACK.md  Framework-Analysis.md  Home.md  README.md  Roadmap.md  docker-deployment.md  security-audit-2026-04-06.md
strategies/: option_divergence.py  option_divergence_v2.py  option_divergence_v3.py
tests/: test_backtest.py  test_capital_flow.py  test_cli.py  test_config.py  test_data_source.py  test_e2e_pipeline.py  test_indicators.py  test_live_trader.py  test_market.py  test_monitor.py  test_optimizer.py  test_options.py  test_reporter.py  test_review.py  test_rps.py  test_sentiment.py  test_trade.py
trading_cli/: __init__.py  main.py
trading_cli/backtest/: __init__.py  engine.py
trading_cli/commands/: __init__.py  analyze_cmd.py  backtest_cmd.py  capital_flow_cmd.py  config_cmd.py  data_cmd.py  debug_cmd.py  market_cmd.py  monitor_cmd.py  multi_dim_analyzer.py  multi_dim_formatter.py  options_cmd.py  report_cmd.py  review_cmd.py  rps_cmd.py  sentiment_cmd.py  strategy_cmd.py  trade_cmd.py  workflow_cmd.py
trading_cli/core/: base_trader.py  capital_flow.py  config.py  data_source.py  ib_provider.py  indicators.py  live_trader.py  market.py  market_review.py  (+10 more)
(+8 files in other folders)
