[tool.poetry]
name = "trading-wisdom-cli"
version = "0.1.0"
description = "AI-powered trading CLI framework supporting A-shares, Hong Kong stocks, and US stocks"
authors = ["Daily Engineer <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trading_cli"}]

[tool.poetry.scripts]
trading-cli = "trading_cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"

[tool.poetry.group.ib.dependencies]
ib_insync = {version = "^0.9.86", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
pylint = "^2.17.0"
mypy = "^1.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
